--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
+    "http-status-code": "^2.1.0",
+    "joi": "^17.13.3",
+    "knex": "^3.1.0",
     "morgan": "^1.10.0",
+    "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
     "yarn": "^1.22.22"
   },
@@ -24,7 +29,9 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
+    "@types/http-status-codes": "^1.2.0",
     "@types/morgan": "^1.9.9",
+    "@types/node": "^22.7.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
