--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
+  "ts-node": {
+    "files": true
+  },
   "exclude": [
     "public",
     "dist"
