--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.7.4",
+    "@types/redis": "^4.0.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
