--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "npx tsc",
     "migration:generate": "npx ts-node ./node_modules/typeorm/cli.js migration:generate src/orm/migrations/Init -d src/configs/database.connect.ts",
     "migration:run": "npx ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/configs/database.connect.ts",
-    "migration:revert":"npx ts-node ./node_modules/typeorm/cli.js migration:revert -d ./src/configs/database.connect.ts",
+    "migration:revert": "npx ts-node ./node_modules/typeorm/cli.js migration:revert -d ./src/configs/database.connect.ts",
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -40,10 +40,15 @@
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
     "@types/http-status-codes": "^1.2.0",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.7.4",
     "@types/redis": "^4.0.11",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
