--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "be-advanced",
+  "name": "taskify-be",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,11 +15,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "brcypt": "^1.0.1",
+    "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "fs": "^0.0.1-security",
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
     "http-status-code": "^2.1.0",
@@ -27,10 +30,13 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
+    "sharp": "^0.33.5",
     "typeorm": "^0.3.20",
     "yarn": "^1.22.22"
   },
@@ -43,11 +49,9 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.7.4",
     "@types/redis": "^4.0.11",
-    "@types/supertest": "^6.0.2",
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
