--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "migration:generate": "npx ts-node ./node_modules/typeorm/cli.js migration:generate src/orm/migrations/Init -d src/configs/database.connect.ts",
     "migration:run": "npx ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/configs/database.connect.ts",
     "migration:revert": "npx ts-node ./node_modules/typeorm/cli.js migration:revert -d ./src/configs/database.connect.ts",
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
+    "start": "npm run build && cross-env BUILD_MODE=production node dist/app.js",
+    "dev": "cross-env BUILD_MODE=development nodemon src/app.ts",
     "test": "jest"
   },
   "author": "",
@@ -20,6 +20,7 @@
     "brcypt": "^1.0.1",
     "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "fs": "^0.0.1-security",
