--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,40 @@ services:
   mysqldb:
     image: mysql:5.7
     restart: always
+    env_file: .env
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=test
+      MYSQL_ROOT_PASSWORD: ${DB_PASS}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
     ports:
       - "3307:3306"
+    networks:
+      - taskify-network
+
+  redis:
+    image: redis:6.2
+    restart: always
+    ports:
+      - "6378:6379"
+    networks:
+      - taskify-network
+
+  taskify-backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    depends_on:
+      - mysqldb
+      - redis
+    env_file: .env
+    networks:
+      - taskify-network
+    
+volumes:
+  mysql_data:
+    driver: local
+networks:
+  taskify-network:
+    driver: bridge
