--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,12 @@
   "exclude": [
     "public",
     "dist",
-  ]
+  ],
+  "baseUrl": "./src",
+  "paths": {
+    "@/*": ["*"],
+    "@modules/*": ["modules/*"],
+    "@share/*": ["shared/*"],
+    "@core/*": ["core/*"],
+  }
 }
