--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "migration:generate": "npx ts-node ./node_modules/typeorm/cli.js migration:generate src/orm/migrations/migration -d src/configs/database.connect.ts",
-    "migration:run": "npx ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/configs/database.connect.ts",
-    "migration:revert": "npx ts-node ./node_modules/typeorm/cli.js migration:revert -d ./src/configs/database.connect.ts",
-    "seed-01": "npx ts-node ./src/orm/seeders/rbac-seed.ts",
+    "migration:generate": "npx ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:generate src/database/migrations/migration -d src/core/configs/database.connect.ts",
+    "migration:run": "npx ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:run -d ./src/core/configs/database.connect.ts",
+    "migration:revert": "npx ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:revert -d ./src/core/configs/database.connect.ts",
+    "seed-01": "npx ts-node -r dotenv/config ./src/database/seeders/rbac-seed.ts",
     "start": "npm run build && cross-env BUILD_MODE=production node dist/app.js",
     "dev": "cross-env BUILD_MODE=development nodemon src/main.ts",
     "test": "jest",
