--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "migration:generate": "npx ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:generate src/database/migrations/migration -d src/core/configs/database.connect.ts",
     "migration:run": "npx ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:run -d ./src/core/configs/database.connect.ts",
     "migration:revert": "npx ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:revert -d ./src/core/configs/database.connect.ts",
-    "seed-01": "npx ts-node -r dotenv/config ./src/database/seeders/rbac-seed.ts",
+    "seed-rbac": "npx ts-node -r dotenv/config ./src/database/seeders/rbac-seed.ts",
     "start": "npm run build && cross-env BUILD_MODE=production node dist/app.js",
     "dev": "cross-env BUILD_MODE=development nodemon src/main.ts",
     "test": "jest",
